ASSERTION FAILED: !((anchorType == PositionIsBeforeChildren || anchorType == PositionIsAfterChildren) && (is<Text>(*m_anchorNode) || editingIgnoresContent(*m_anchorNode))) in WebCore::Position::Position https://bugs.webkit.org/show_bug.cgi?id=164053

Reviewed by Ryosuke Niwa.

Since `firstPositionInNode()` and `lastPositionInNode()` take any node
as their argument, including `Comment`, we should use
`PositionIsOffsetInAnchor` for any `CharacterData`, not only for `Text`.

* LayoutTests/platform/glib/TestExpectations:
* Source/WebCore/dom/Node.h:
(WebCore::Node::isCharacterData const):
* Source/WebCore/dom/Position.h:
(WebCore::firstPositionInNode):
(WebCore::lastPositionInNode):

Canonical link: https://commits.webkit.org/270763@main